; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_metadata_operation_failed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_metadata_operation_failed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pool = type { i32 }

@.str = private unnamed_addr constant [47 x i8] c"%s: metadata operation '%s' failed: error = %d\00", align 1
@PM_READ_ONLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pool*, i8*, i32)* @metadata_operation_failed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @metadata_operation_failed(%struct.pool* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.pool*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.pool* %0, %struct.pool** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.pool*, %struct.pool** %4, align 8
  %8 = getelementptr inbounds %struct.pool, %struct.pool* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @dm_device_name(i32 %9)
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @DMERR_LIMIT(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i32 %10, i8* %11, i32 %12)
  %14 = load %struct.pool*, %struct.pool** %4, align 8
  %15 = call i32 @abort_transaction(%struct.pool* %14)
  %16 = load %struct.pool*, %struct.pool** %4, align 8
  %17 = load i32, i32* @PM_READ_ONLY, align 4
  %18 = call i32 @set_pool_mode(%struct.pool* %16, i32 %17)
  ret void
}

declare dso_local i32 @DMERR_LIMIT(i8*, i32, i8*, i32) #1

declare dso_local i32 @dm_device_name(i32) #1

declare dso_local i32 @abort_transaction(%struct.pool*) #1

declare dso_local i32 @set_pool_mode(%struct.pool*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
